test-ingress/k8singress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  #namespace: test2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: #n8n-worker.local
    http:
      paths:
      - path: / #(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: express-app-service
            port:
              number: 80 
      - path: /pn #(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: nginx-project
            port:
              number: 80
      - pathType: Prefix
        path: /oat #/oat/(.*)
        backend:
          service:
            name: oatnginx-project
            port:
              number: 80
